--- a/BooksTracker/BooksTracker/Views/Book/List.cshtml
+++ b/BooksTracker/BooksTracker/Views/Book/List.cshtml
@@ -4,33 +4,33 @@
 
 <h1>List</h1>
 
-<table>
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Title</th>
-            <th>Author</th>
-            <th>Publication Date</th>
-            <th>Checked Out Date</th>
-            <th>Due Date</th>
-            <th>Returned Date</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (Book book in ViewBag.Books)
-        {
+@*<table>
+        <thead>
             <tr>
-                <td><a href="/Book/Details?id=@(book.ID)">@(book.ID)</a></td>
-                <td>@(book.Title)</td>
-                <td>@(book.Author)</td>
-                <td>@(book.PublicationDate.ToLongDateString())</td>
-                <td>@(book.CheckedOutDate.ToLongDateString())</td>
-                <td>@(book.DueDate.ToLongDateString())</td>
-                <td>@(book.ReturnedDate==null?"Not Returned":((DateTime)book.ReturnedDate).ToLongDateString())</td>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Publication Date</th>
+                <th>Checked Out Date</th>
+                <th>Due Date</th>
+                <th>Returned Date</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (Book book in ViewBag.Books)
+            {
+                <tr>
+                    <td><a href="/Book/Details?id=@(book.ID)">@(book.ID)</a></td>
+                    <td>@(book.Title)</td>
+                    <td>@(book.Authors)</td>
+                    <td>@(book.PublicationDate.ToLongDateString())</td>
+                    <td>@(book.CheckedOutDate.ToLongDateString())</td>
+                    <td>@(book.DueDate.ToLongDateString())</td>
+                    <td>@(book.ReturnedDate==null?"Not Returned":((DateTime)book.ReturnedDate).ToLongDateString())</td>
+                </tr>
+            }
+        </tbody>
+    </table>*@
 
 <!-- // Code borowed: https://github.com/TECHCareers-by-Manpower/4.1-MVC/tree/master/MVC_4Point1 -->
 <!-- // Code borowed: https://github.com/TECHCareers-by-Manpower/4.1-MVC/blob/Sep21Practice/MVC_4Point1/Views/Book/List.cshtml -->
