--- a/BooksTracker/BooksTracker/Views/Book/List.cshtml
+++ b/BooksTracker/BooksTracker/Views/Book/List.cshtml
@@ -2,35 +2,23 @@
     ViewData["Title"] = "List";
 }
 
-<h1>List</h1>
-
-@*<table>
-        <thead>
+<h1> Author </h1>
+<table>
+    <thead>
+        <tr>
+            <th>AuthorID</th>
+            <th>Author Name</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (Author author in ViewBag.Authors)
+        {
             <tr>
-                <th>ID</th>
-                <th>Title</th>
-                <th>Author</th>
-                <th>Publication Date</th>
-                <th>Checked Out Date</th>
-                <th>Due Date</th>
-                <th>Returned Date</th>
+                <td><a href="/Author/Details?id=@(author.ID)">@(author.ID)</a></td>
+                <td>@(author.Name)</td>
             </tr>
-        </thead>
-        <tbody>
-            @foreach (Book book in ViewBag.Books)
-            {
-                <tr>
-                    <td><a href="/Book/Details?id=@(book.ID)">@(book.ID)</a></td>
-                    <td>@(book.Title)</td>
-                    <td>@(book.Authors)</td>
-                    <td>@(book.PublicationDate.ToLongDateString())</td>
-                    <td>@(book.CheckedOutDate.ToLongDateString())</td>
-                    <td>@(book.DueDate.ToLongDateString())</td>
-                    <td>@(book.ReturnedDate==null?"Not Returned":((DateTime)book.ReturnedDate).ToLongDateString())</td>
-                </tr>
-            }
-        </tbody>
-    </table>*@
+        }
+    </tbody>
+</table>
 
 <!-- // Code borowed: https://github.com/TECHCareers-by-Manpower/4.1-MVC/tree/master/MVC_4Point1 -->
-<!-- // Code borowed: https://github.com/TECHCareers-by-Manpower/4.1-MVC/blob/Sep21Practice/MVC_4Point1/Views/Book/List.cshtml -->
