--- a/BooksTracker/BooksTracker/Views/Book/Details.cshtml
+++ b/BooksTracker/BooksTracker/Views/Book/Details.cshtml
@@ -19,7 +19,7 @@
         <section>
             <h2>Book Details</h2>
             <p>Title: @(ViewBag.Book.Title)</p>
-            <p>Author: @(ViewBag.Book.Author)</p>
+            <p>Author: @(ViewBag.Book.Author.Name)</p>
             <p>Publication Date: @(ViewBag.Book.PublicationDate.ToLongDateString())</p>
         </section>
         <section>
@@ -28,13 +28,7 @@
             <p>Due Date: @(ViewBag.Book.DueDate.ToLongDateString())</p>
             <p>Checked Out Date: @(ViewBag.Book.ReturnedDate == null?"Not Returned":((DateTime)ViewBag.Book.ReturnedDate).ToLongDateString())</p>
         </section>
-
-        <section>
-            <h2>Authors Details:</h2>
-            <p>AuthorID : @(ViewBag.Author.ID)</p>
-            <p>Author Name: @(ViewBag.Author.Name)</p>
-        </section>
-
+        
         <a class="btn btn-primary" href="/Book/Details?id=@(ViewBag.Book.ID)&extend=true">Extend Deadline of @(ViewBag.Book.ID) - @(ViewBag.Book.Title)</a>
         <a class="btn btn-danger" href="/Book/Details?id=@(ViewBag.Book.ID)&delete=true">Delete @(ViewBag.Book.ID) - @(ViewBag.Book.Title)</a>
     }
