--- a/BooksTracker/BooksTracker/Views/Book/List.cshtml
+++ b/BooksTracker/BooksTracker/Views/Book/List.cshtml
@@ -6,17 +6,27 @@
 <table>
     <thead>
         <tr>
-            <th>AuthorID</th>
-            <th>Author Name</th>
+            <th>ID</th>
+            <th>Title</th>
+            <th>Author</th>
+            <th>Publication Date</th>
+            <th>Checked Out Date</th>
+            <th>Due Date</th>
+            <th>Returned Date</th>
         </tr>
     </thead>
     <tbody>
-        @foreach (Author author in ViewBag.Authors)
+        @foreach (Book book in ViewBag.Books)
         {
-            <tr>
-                <td><a href="/Author/Details?id=@(author.ID)">@(author.ID)</a></td>
-                <td>@(author.Name)</td>
-            </tr>
+        <tr>
+            <td><a href="/Book/Details?id=@(book.ID)">@(book.ID)</a></td>
+            <td>@(book.Title)</td>
+            <td>@(book.Author.Name)</td>
+            <td>@(book.PublicationDate.ToLongDateString())</td>
+            <td>@(book.CheckedOutDate.ToLongDateString())</td>
+            <td>@(book.DueDate.ToLongDateString())</td>
+            <td>@(book.ReturnedDate==null?"Not Returned":((DateTime)book.ReturnedDate).ToLongDateString())</td>
+        </tr>
         }
     </tbody>
 </table>
